--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,3 +1,6 @@
 poll.plugin.poll.notfound=Poll not found [{0}]
 poll.plugin.answer.notfound=Answer not found [{0}]
+poll.plugin.error=Please select an option.
 poll.plugin.vote.saved=Your vote has been saved
+poll.plugin.vote.repeated=You've already voted in this poll!
+poll.plugin.vote.button=Vote!
