--- a/grails-app/i18n/messages_pl.properties
+++ b/grails-app/i18n/messages_pl.properties
@@ -1,3 +1,6 @@
 poll.plugin.poll.notfound=Nie znaleziono ankiety [{0}]
 poll.plugin.answer.notfound=Nie znaleziono odpowiedzi [{0}]
-poll.plugin.vote.saved=Tw\u00F3j g\u0142os zosta\u0142 zapisany
+poll.plugin.error=Zaznacz odpowiedź.
+poll.plugin.vote.saved=Twój głos został zapisany
+poll.plugin.vote.repeated=Już głosowałeś w tej ankiecie!
+poll.plugin.vote.button=Głosuj!
